# oil-spill-detection

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Oil_Spill.py  README.md  SegNet_model.h5  Welcome_Screen.py  compose.yaml  docker-entrypoint.sh  model_functions.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: README.md  deeplabv3plus.yaml  deeplabv3plus_smoke.yaml  foundation.yaml  foundation_smoke.yaml  segformer.yaml  segformer_smoke.yaml  unet.yaml  unet_smoke.yaml
configs/ablations/: DeepLabV3Plus__ce_weighted.yaml  DeepLabV3Plus__dice_focal.yaml  Unet__ce_weighted.yaml  Unet__dice_focal.yaml  foundation__ce_weighted.yaml  foundation__dice_focal.yaml  segformer__ce_weighted.yaml  segformer__dice_focal.yaml
data/: README.md  checksums.sha256
docs/: ARCHITECTURE.md  ablations.md  data_report.md  legacy_content.md  metrics.md  results.md
docs/case_study/: README.md  wakashio_oil_polygons.geojson  wakashio_summary.json
docs/results/: deeplabv3plus-r50.json  run-20260613-101720.json  segformer-mit-b2.json  unet-r34-baseline.json
pages/: 0_How_It_Works.py  1_Model_Comparisons.py  2_Oil_Spill_Detector.py  3_Our_Documentation.py  4_Our_Solar_App.py  5_Contact_Us.py
scripts/: README.md  detect.py  download_coastlines.py  evaluate.py  export_onnx.py  make_data.py  modal_train.py  publish_hf.py  run_ablations.py  run_case_study.py  serve.py  train.py
src/oilspill/: __init__.py  metrics.py
src/oilspill/api/: __init__.py  app.py  models.py  service.py  settings.py
src/oilspill/data/: __init__.py  colors.py  dataset.py  extract.py  transforms.py
src/oilspill/evaluation/: __init__.py  evaluate.py  gallery.py  model_loading.py  plots.py  report.py
src/oilspill/models/: __init__.py  foundation.py  registry.py  second_arch.py  segformer.py
src/oilspill/packaging/: __init__.py  model_card.py  onnx_export.py
src/oilspill/pipeline/: __init__.py  detect.py  infer.py  ingest.py  preprocess.py  vectorize.py
src/oilspill/training/: __init__.py  config.py  datasets.py  losses.py  seed.py  trainer.py
tests/: test_api.py  test_data.py  test_detect_e2e.py  test_evaluate.py  test_export.py  test_foundation.py  test_gallery.py  test_infer.py  test_ingest.py  test_metrics.py  test_model_loading_export.py  test_package.py  test_preprocess.py  test_run_ablations.py  test_segformer.py  test_training.py  test_training_datasets.py  test_vectorize.py
tests/fixtures/cdse/: products_search.json  token_response.json
web/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
web/e2e/: quick-detect.spec.ts
web/src/: App.tsx
web/src/components/: Legend.tsx
web/src/lib/: api.ts  classes.ts  geojson.ts  types.ts
web/src/styles/: global.css
web/src/views/: Models.tsx  QuickDetect.tsx  SceneMonitor.tsx
