[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oilspill"
version = "0.1.0"
description = "SAR oil spill detection: training, evaluation, Sentinel-1 pipeline, and web API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# Runtime dependencies for the serving path (API + inference + geospatial
# pipeline). The training/evaluation-only stack (smp, transformers, torchvision,
# albumentations, mlflow, matplotlib) lives in the `ml` group below so the
# deployed container stays lean. torch + torchmetrics stay here because the
# metrics module (used across the package) needs them.
dependencies = [
    # Deep learning (metrics + tensors)
    "torch",
    "torchmetrics",
    # Core scientific stack
    "numpy",
    "scipy",
    "pillow",
    "pyyaml",
    # Inference / serving
    "onnx",
    "onnxruntime",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "httpx",
    # Geospatial / SAR
    "rasterio",
    "rioxarray",
    "geopandas",
    "shapely",
    "pyproj",
    "xarray",
    "xarray-sentinel",
    "sarsen",
    # Utilities
    "requests",
    "tqdm",
    "python-dotenv",
    "huggingface-hub",
]

[dependency-groups]
# Training & evaluation stack: model architectures, augmentation, tracking,
# plotting. Required for training/eval and the full test suite, but NOT for the
# serving container. Included in `dev` so `make check` and CI have them.
ml = [
    "torchvision",
    "segmentation-models-pytorch",
    "transformers",
    "albumentations",
    "mlflow",
    "matplotlib",
]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
    "pre-commit",
    {include-group = "ml"},
]
# Infra for launching GPU training on Modal. Not installed by CI (which is
# CPU-only and never trains); install locally with `uv sync --group gpu`.
gpu = [
    "modal",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oilspill"]

# Local and CI installs are CPU-only by design; GPU training runs on a remote
# service with its own image. Pin torch/torchvision to the CPU wheel index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src", "tests"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: slow tests (full training, large downloads)",
]

[tool.coverage.run]
source = ["src/oilspill"]
branch = false
omit = [
    # The epoch loop / optimiser / AMP / MLflow plumbing only runs meaningfully
    # on a real (GPU) training run. It is exercised end-to-end by the smoke
    # train (`make train-smoke`), not by fast unit tests, so excluding it keeps
    # the coverage signal focused on unit-testable serving/eval/data code.
    "src/oilspill/training/trainer.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
